# gasbubbles

./: .gitmodules  README.md  clean_notebooks.py  meson.build  meson_options.txt  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  rattler.yml
conda.recipe/: recipe.yaml  variants.yaml
ipynb/: bubble_backscatter.ipynb  rising_bubble.ipynb  rising_bubble_stream.ipynb  sbm.ipynb
python/: meson.build
python/gasbubbles/: __init__.py  parameters.py
python/gasbubbles/backscatter/: __init__.py  echosms_wrapper.py
python/gasbubbles/backscatter/ai_created/: __init__.py  ainslie_leighton.py  anderson.py  li.py  medwin.py  spheroidal.py  stanton.py  thuraisingham.py
python/gasbubbles/dissolution/: __init__.py  bubble_shape.py  dissolution.py  environment.py  rise_velocity.py
python/tests/: test_backscatter.py
src/: meson.build
