# SPDX-FileCopyrightText: 2026 Peter Urban
#
# SPDX-License-Identifier: CC0-1.0

# Future C++ sources will be added here
# For now, this is a placeholder for the build system

# Example structure for future C++ code:
# cpp_sources = files(
#     'gasbubbles/backscatter/model.cpp',
# )
# 
# cpp_headers = files(
#     'gasbubbles/backscatter/model.hpp',
# )
